--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-router": "0.0.1",
+    "fs-extra": "^8.1.0",
     "knex": "^0.20.4",
+    "multer": "^1.4.2",
     "mysql": "^2.17.1"
   }
 }
