--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.4.3",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-event-hub": "^1.0.2",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
